// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`babel-plugin-lingui-extract-messages should extract JS translations only once inside React components 1`] = `
Object {
  Test: Object {
    origin: Array [
      Array [
        packages/babel-plugin-extract-messages/test/fixtures/jsx/with-react.js,
        3,
      ],
    ],
  },
}
`;

exports[`babel-plugin-lingui-extract-messages should extract all messages from JS files (integration) 1`] = `
Object {
  msg.hello: Object {
    origin: Array [
      Array [
        packages/babel-plugin-extract-messages/test/fixtures/js/integration.js,
        3,
      ],
      Array [
        packages/babel-plugin-extract-messages/test/fixtures/js/integration.js,
        4,
      ],
    ],
  },
}
`;

exports[`babel-plugin-lingui-extract-messages should extract all messages from JS files (macros) 1`] = `
Object {
  Message: Object {
    origin: Array [
      Array [
        packages/babel-plugin-extract-messages/test/fixtures/js/macro.js,
        1,
      ],
    ],
  },
  Message With Description: Object {
    description: description,
    origin: Array [
      Array [
        packages/babel-plugin-extract-messages/test/fixtures/js/macro.js,
        5,
      ],
      Array [
        packages/babel-plugin-extract-messages/test/fixtures/js/macro.js,
        36,
      ],
    ],
  },
  Message With Description Multiline: Object {
    description: description
multiline,
    origin: Array [
      Array [
        packages/babel-plugin-extract-messages/test/fixtures/js/macro.js,
        20,
      ],
    ],
  },
  Message With Description No Colon: Object {
    description: description,
    origin: Array [
      Array [
        packages/babel-plugin-extract-messages/test/fixtures/js/macro.js,
        13,
      ],
    ],
  },
  Message With Description Spaced: Object {
    description: description,
    origin: Array [
      Array [
        packages/babel-plugin-extract-messages/test/fixtures/js/macro.js,
        9,
      ],
    ],
  },
  Message With {param}: Object {
    origin: Array [
      Array [
        packages/babel-plugin-extract-messages/test/fixtures/js/macro.js,
        29,
      ],
    ],
  },
  msg.id: Object {
    defaults: Message With Description,
    origin: Array [
      Array [
        packages/babel-plugin-extract-messages/test/fixtures/js/macro.js,
        24,
      ],
    ],
  },
}
`;

exports[`babel-plugin-lingui-extract-messages should extract all messages from JS files 1`] = `
Object {
  msg.default: Object {
    defaults: Hello World,
    origin: Array [
      Array [
        packages/babel-plugin-extract-messages/test/fixtures/js/all.js,
        5,
      ],
      Array [
        packages/babel-plugin-extract-messages/test/fixtures/js/all.js,
        6,
      ],
    ],
  },
  msg.hello: Object {
    origin: Array [
      Array [
        packages/babel-plugin-extract-messages/test/fixtures/js/all.js,
        4,
      ],
    ],
  },
  {count, plural, one {# book} other {# books}}: Object {
    origin: Array [
      Array [
        packages/babel-plugin-extract-messages/test/fixtures/js/all.js,
        7,
      ],
    ],
  },
}
`;

exports[`babel-plugin-lingui-extract-messages should extract all messages from JSX files (integration) 1`] = `
Object {
  Hi, my name is {name}: Object {
    origin: Array [
      Array [
        packages/babel-plugin-extract-messages/test/fixtures/jsx/integration.js,
        3,
      ],
    ],
  },
  Title: Object {
    origin: Array [
      Array [
        packages/babel-plugin-extract-messages/test/fixtures/jsx/integration.js,
        4,
      ],
      Array [
        packages/babel-plugin-extract-messages/test/fixtures/jsx/integration.js,
        13,
      ],
      Array [
        packages/babel-plugin-extract-messages/test/fixtures/jsx/integration.js,
        14,
      ],
    ],
  },
  {count, plural, one {# book} other {# books}}: Object {
    origin: Array [
      Array [
        packages/babel-plugin-extract-messages/test/fixtures/jsx/integration.js,
        6,
      ],
      Array [
        packages/babel-plugin-extract-messages/test/fixtures/jsx/integration.js,
        16,
      ],
      Array [
        packages/babel-plugin-extract-messages/test/fixtures/jsx/integration.js,
        21,
      ],
    ],
  },
}
`;

exports[`babel-plugin-lingui-extract-messages should extract all messages from JSX files 1`] = `
Object {
  Hi, my name is <0>{name}</0>: Object {
    origin: Array [
      Array [
        packages/babel-plugin-extract-messages/test/fixtures/jsx/all.js,
        9,
      ],
    ],
  },
  msg.default: Object {
    defaults: Hello World,
    origin: Array [
      Array [
        packages/babel-plugin-extract-messages/test/fixtures/jsx/all.js,
        7,
      ],
      Array [
        packages/babel-plugin-extract-messages/test/fixtures/jsx/all.js,
        8,
      ],
    ],
  },
  msg.hello: Object {
    description: Description,
    origin: Array [
      Array [
        packages/babel-plugin-extract-messages/test/fixtures/jsx/all.js,
        6,
      ],
    ],
  },
  {count, plural, one {# book} other {# books}}: Object {
    origin: Array [
      Array [
        packages/babel-plugin-extract-messages/test/fixtures/jsx/all.js,
        10,
      ],
    ],
  },
}
`;

exports[`babel-plugin-lingui-extract-messages should extract noop strings 1`] = `
Object {
  Czech: Object {
    origin: Array [
      Array [
        packages/babel-plugin-extract-messages/test/fixtures/noop/actual.js,
        5,
      ],
    ],
  },
  English: Object {
    origin: Array [
      Array [
        packages/babel-plugin-extract-messages/test/fixtures/noop/actual.js,
        4,
      ],
    ],
  },
}
`;
